--- a/references.bib
+++ b/references.bib
@@ -4216,3 +4216,10 @@ number={CMU-LTI-08-005}}
 	year={2006},
 	publisher={Springer}
 }
+
+@INPROCEEDINGS{whitney16,
+	author = {Whitney, David and Eldon, Miles and Oberlin, John and Tellex, Stefanie},
+	title = {Interpreting Multimodal Referring Expressions in Real Time},
+	booktitle = {International Conference on Robotics and Automation},
+	year = {2016}
+}
